Fixed an issue with some token inputs not geting displayed competely Fixed an issue with updating bookings not showing the proper way

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -169,7 +169,6 @@ input, button, select, textarea {
     -o-transition: border linear 0.2s, box-shadow linear 0.2s;
     transition: border linear 0.2s, box-shadow linear 0.2s;
     display: inline-block;
-    height: 30px;
     padding: 4px 6px;
     margin-bottom: 10px;
     font-size: 14px;
